welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: not found: value num
		if(nums(i)==nums(i+1)==num(i+2))
                                       ^